disable webview multi-process
Change-Id: I9c8f5c6ca4a77c71e38d4074beef1fff3d2f6f59

--- a/core/res/res/xml/config_webview_packages.xml
+++ b/core/res/res/xml/config_webview_packages.xml
@@ -18,4 +18,7 @@
     <!-- The default WebView implementation -->
     <webviewprovider description="Android WebView" packageName="com.android.webview" availableByDefault="true">
     </webviewprovider>
+    <webviewprovider description="Chrome Debug" packageName="com.google.android.apps.chrome">
+        <!-- Ignore this package on user/release builds unless preinstalled. -->
+    </webviewprovider>
 </webviewproviders>
