Improve fix done for ignoring bluetooth over usb device
Fix done for ignoring bluetooth usb device is now done
based on vendor_id:product_id configured in configuration
file.

Change-Id: I676ab5c9440b5036fdae0a0b0a7bf62602de4f79
Tracked-On: https://jira.devtools.intel.com/browse/OAM-84133
Signed-off-by: Jeevaka Prabu Badrappan <jeevaka.badrappan@intel.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1198,6 +1198,12 @@
     <string-array name="config_usbHostBlacklist" translatable="false">
     </string-array>
 
+    <!-- List of restricted usb devices to exclude. Items should be added in the format
+          vendorId:produtId.
+    -->
+    <string-array name="config_usbDeviceBlacklist" translatable="false">
+    </string-array>
+
     <!-- List of paths to serial ports that are available to the serial manager.
          for example, /dev/ttyUSB0
     -->
