[Pie port] Add pip buttons to freeform windows
Thanks to @farmerbb for assistance and @rogerdott for the graphics

Change-Id: I8ddad6eab27f52574ee1c10e8006612fb46a83c5

--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -145,6 +145,8 @@
       <item>@drawable/decor_back_button_dark</item>
       <item>@drawable/decor_back_button_light</item>
       <!-- endregion -->
+      <item>@drawable/decor_pip_button_dark</item>
+      <item>@drawable/decor_pip_button_light</item>
    </array>
 
     <!-- Used in LocalePicker -->
