--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -142,6 +142,8 @@
        <!-- region @cobra -->
        <item>@drawable/decor_minimize_button_dark</item>
        <item>@drawable/decor_minimize_button_light</item>
+       <item>@drawable/decor_restore_button_dark</item>
+       <item>@drawable/decor_restore_button_light</item>
        <!-- endregion -->
    </array>
 
