Change cobra to boringdroid of region name
Signed-off-by: utzcoz <utzcoz@outlook.com>

Conflicts:
	services/core/java/com/android/server/wm/WindowManagerService.java

--- a/core/res/res/layout/decor_caption.xml
+++ b/core/res/res/layout/decor_caption.xml
@@ -30,7 +30,7 @@
             android:background="@drawable/decor_caption_title"
             android:focusable="false"
             android:descendantFocusability="blocksDescendants" >
-        <!-- region @cobra -->
+        <!-- region @boringdroid -->
         <Button
                 android:id="@+id/minimize_window"
                 android:layout_width="32dp"
