--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -139,7 +139,7 @@
    <array name="preloaded_freeform_multi_window_drawables">
       <item>@drawable/decor_maximize_button_dark</item>
       <item>@drawable/decor_maximize_button_light</item>
-       <!-- region @cobra -->
+       <!-- region @boringdroid -->
        <item>@drawable/decor_minimize_button_dark</item>
        <item>@drawable/decor_minimize_button_light</item>
        <item>@drawable/decor_restore_button_dark</item>
